Refactor node checkout for FCC campaign reservations
